update logTrackProperties for edit curves

--- a/source/dialogs/error-message/error-message-modal.html
+++ b/source/dialogs/error-message/error-message-modal.html
@@ -2,7 +2,7 @@
     <div class='modal-dialog modal-sm'>
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="wiModal.onCloseButtonClicked()" aria-hidden="true">&times;</button>
                 <h4>Error</h4>
             </div>
             <div class="modal-body text-center padding-2em">
@@ -10,7 +10,7 @@
                 <span class="margin-left-0_5em color-error"><i>{{wiModal.error}}</i></span>
             </div>
             <div class="modal-footer">
-                <button class='btn btn-default' ng-click='wiModal.onOkButtonClicked()'>Close</button>
+                <button class='btn btn-default' ng-click='wiModal.onCloseButtonClicked()'>Close</button>
             </div>
         </div>
     </div>
