--- a/source/html/index.html
+++ b/source/html/index.html
@@ -13,8 +13,6 @@
     <link rel="stylesheet" href="vendor/css/kendo.material.min.css"/>
     <link rel="stylesheet" href="vendor/css/kendo.material.mobile.min.css"/>
     <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap-colorpicker.min.css">
-    <!-- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-colorpicker/2.5.1/css/bootstrap-colorpicker.css"> -->
-    <link rel="stylesheet" type="text/css" href="vendor/css/colorpicker.less">
     <link rel="stylesheet" type="text/css" href="css/dialogs.css">
 
     <link rel="stylesheet" href="css/sprite_16.css">
@@ -60,12 +58,11 @@
     <!-- color picker -->
     <script src="vendor/js/kendo.all.min.js"></script>
     <script type="text/javascript" src="vendor/js/bootstrap-colorpicker.min.js"></script>
-    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-colorpicker/2.5.1/js/bootstrap-colorpicker.js"></script> -->
-    <script type="text/javascript" src="vendor/js/colorpicker-color.js"></script>
+    <script type="text/javascript" src="vendor/js/EventEmitter-4.0.3.min.js"></script>
+    <!-- <script type="text/javascript" src="vendor/js/colorpicker-color.js"></script>
     <script type="text/javascript" src="vendor/js/colorpicker-component.js"></script>
     <script type="text/javascript" src="vendor/js/colorpicker-defaults.js"></script>
-    <script type="text/javascript" src="vendor/js/colorpicker-plugin-wrapper.js"></script>
-
+    <script type="text/javascript" src="vendor/js/colorpicker-plugin-wrapper.js"></script> -->
     <!-- Insert this line after script imports -->
     <script>
         if (window.module) module = window.module;
