working on crossplot & histogram

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -32,6 +32,8 @@
     <link href='css/wi-slidingbar.css' rel='stylesheet'>
 
     <link href='css/wi-logplot.css' rel='stylesheet'>
+    <link href='css/wi-crossplot.css' rel='stylesheet'>
+    <link href='css/wi-histogram.css' rel='stylesheet'>
     <link href='css/wi-d3.css' rel='stylesheet'>
     <link href='css/wi-explorer.css' rel='stylesheet'>
 
