--- a/source/dialogs/color-picker/color-picker-modal.html
+++ b/source/dialogs/color-picker/color-picker-modal.html
@@ -1,4 +1,4 @@
-<div class="modal">
+<div class="modal" data-backdrop="static" data-keyboard="false">
 	    <div class="modal-dialog modal-sm chooseColor">
 	        <div class="modal-content">
 	            <div class="modal-body">
@@ -32,8 +32,8 @@
 					</div>
 	            </div>
 	            <div class="modal-footer">
-	            	<button class='btn btn-default' ng-click='wiModal.onOkButtonClicked()'><span class="ok-16x16"></span>Ok</button>
-					<button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="cancel-16x16"></span>Cancel</button>
+	            	<button class='btn btn-default' ng-click='wiModal.onOkButtonClicked()'><span class="ok-16x16"></span>&nbsp;Ok</button>
+					<button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()'><span class="cancel-16x16"></span>&nbsp;Cancel</button>
 	            </div>
 	        </div>
 	    </div>
