--- a/source/dialogs/line-style/line-style-modal.html
+++ b/source/dialogs/line-style/line-style-modal.html
@@ -2,7 +2,7 @@
     <div class='modal-dialog'>
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="wiModal.onOkButtonClicked()" aria-hidden="true">&times;</button>
                 <h4>Line Style</h4>
             </div>
             <div class="modal-body text-center">
@@ -60,10 +60,14 @@
                             <div class="form-group">
                                 <label class="control-label col-sm-4 normal-text" for="color">Line Color</label>
                                 <div class="col-sm-8 text-left">
-                                    <input kendo-color-picker k-palette="'websafe'"
+                                    <!-- <input kendo-color-picker k-palette="'websafe'"
                                            class="form-control wi-form-control"
                                            ng-model="wiModal.options.lineStyle.lineColor"/>
-                                    {{wiModal.options.lineStyle.lineColor}}
+                                    {{wiModal.options.lineStyle.lineColor}} -->
+                                    <div class="addon valign-middle" 
+                                        ng-style="{'background-color':wiModal.options.lineStyle.lineColor}"><img/></div>
+                                    <button ng-click="wiModal.lineColor();"
+                                            class="form-control wi-form-control width-80px">Change</button>
                                 </div>
                             </div>
                         </div>
