--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -163,8 +163,13 @@
                                                     <!-- <input kendo-color-picker k-palette="'websafe'"
                                                            class="form-control wi-form-control"
                                                         ng-model="wiModal.props.general.color"/> -->
+                                                    <div class="addon valign-middle" 
+                                                        ng-style="{'background-color':wiModal.props.general.color}"><img/></div>
                                                     <button ng-click="wiModal.colorTrack();"
-                                                            class="form-control wi-form-control">Color Track</button>
+                                                            class="form-control wi-form-control width-80px">
+                                                            Change
+                                                    </button>
+                                                    
                                                 </div>
                                             </div>
                                         </div>
