--- a/source/dialogs/symbol-style/symbol-style-modal.html
+++ b/source/dialogs/symbol-style/symbol-style-modal.html
@@ -63,10 +63,13 @@
                                         <div class="form-group">
                                             <label class="control-label col-sm-4 normal-text" for="color">Line Color</label>
                                             <div class="col-sm-8 text-left">
-                                                <input kendo-color-picker k-palette="'websafe'"
+                                                <!-- <input kendo-color-picker k-palette="'websafe'"
                                                        class="form-control wi-form-control"
                                                        ng-model="wiModal.options.symbolStyle.symbolStrokeStyle"/>
-                                                       {{wiModal.options.symbolStyle.symbolStrokeStyle}}
+                                                       {{wiModal.options.symbolStyle.symbolStrokeStyle}} -->
+                                                <div class="addon valign-middle" ng-style="{'background-color':wiModal.options.symbolStyle.symbolStrokeStyle}"><img/></div>
+                                                <button ng-click="wiModal.lineColor();" 
+                                                        class="form-control wi-form-control width-80px">Change</button>
                                             </div>
                                         </div>
                                     </div>
@@ -86,10 +89,9 @@
                                                    ng-model="wiModal.options.lines.color"/> -->
                                             <!-- <input type="color" name="" data-alphacontrol="alpha-range"
                                                     ng-model="wiModal.options.symbolStyle.symbolFillStyle"> -->
-                                            <input color-picker 
-                                                    color-picker-model="wiModal.options.symbolStyle.symbolFillStyle"
-                                                    ng-style="{background:wiModal.options.symbolStyle.symbolFillStyle}">
-                                            
+                                            <div class="addon valign-middle" ng-style="{'background-color':wiModal.options.symbolStyle.symbolFillStyle}"><img/></div>
+                                            <button ng-click="wiModal.solidFillColor();"
+                                            class="form-control wi-form-control width-80px">Change</button>
                                         </div>
                                     </div>
                                 </div>
