--- a/source/dialogs/color-picker/color-picker-modal.html
+++ b/source/dialogs/color-picker/color-picker-modal.html
@@ -2,7 +2,7 @@
 	    <div class="modal-dialog modal-sm chooseColor">
 	        <div class="modal-content">
 	            <div class="modal-body">
-	            	<P>Color Track</P>
+	            	<h5>Color picker</h5>
 					<input type="hidden" class="form-control" id="cp" />
 					<div id="demo"></div>
 					<div class="container-fluid padding-top-2em">
