--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -200,16 +200,11 @@
                                             <tr ng-repeat="curve in wiModal.curves"
                                                 ng-class="{selected:$index == selectedRow}"
                                                 ng-click="wiModal.setClickedRow($index)">
-                                                <td>
+                                                <td style="width: 12%">
                                                     <!-- <input type="text" ng-model="curve.alias" name="curveName"
                                                             class="form-control wi-form-control"
                                                             ng-change="wiModal.onChange($index);">
                                                     </input> -->
-                                                    <!-- <select ng-model="wiModal.selectCurveArr[$index].properties.datasetName + '.' + wiModal.selectCurveArr[$index].properties.name;"
-                                                            name="curveName"
-                                                            class="form-control wi-form-control"
-                                                            ng-options="item.properties.datasetName + '.' + item.properties.name for item in wiModal.curvesArr track by item.id"
-                                                            ng-change="wiModal.onChange($index);"></select> -->
                                                     <select ng-model="wiModal.lineCurve[$index].datasetCurve"
                                                             name="curveName"
                                                             class="form-control wi-form-control"
@@ -248,15 +243,13 @@
                                                     <input ng-model="curve.lineOptions"
                                                             type="button" value="Edit..." id="editLine" 
                                                             class="form-control wi-form-control"
-                                                            ng-click="wiModal.lineStyleButtonClicked($index)"
-                                                            ng-change="wiModal.onChange($index);">
+                                                            ng-click="wiModal.lineStyleButtonClicked($index); wiModal.onChange($index);">
                                                 </td>
                                                 <td>
                                                     <input ng-model="curve.symbolOptions"
                                                             type="button" value="Edit..." id="editSymbol" 
                                                             class="form-control wi-form-control"
-                                                            ng-click="wiModal.symbolStyleButtonClicked($index)"
-                                                            ng-change="wiModal.onChange($index);">
+                                                            ng-click="wiModal.symbolStyleButtonClicked($index); wiModal.onChange($index);">
                                                 </td>
                                                 <td>
                                                     <select ng-model="curve.displayAs" name="displayAs"
