--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -141,7 +141,7 @@
                                     <div class="padding-left-20-percent">
                                         <div class="form-group">
                                             <label class="control-label col-sm-5 normal-text" for="width">
-                                                Width
+                                                Width (inchs)
                                             </label>
                                             <div class="col-sm-7">
                                                 <input type="number" step="0.001" min="1"
