--- a/source/dialogs/curve-properties/curve-properties-modal.html
+++ b/source/dialogs/curve-properties/curve-properties-modal.html
@@ -12,7 +12,7 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label class="control-label col-sm-3" for="wellName"><span class=""></span>Well</label>
+                                    <label class="control-label col-sm-3 normal-text" for="wellName"><span class="well-16x16"></span>Well</label>
                                     <div class="col-sm-9">
                                         <input type="text" class="form-control wi-form-control" value="" id="wellName" name="wellName" ng-model="wiModal.well.data.label" disabled>
                                     </div>
@@ -23,76 +23,72 @@
                             <div class="col-sm-6">
                                 <h5>Header</h5>
                                 <div class="form-group">
-                                    <label class="control-label col-sm-3" for="curveName"><span class=""></span>Name</label>
+                                    <label class="control-label col-sm-3 normal-text" for="curveName"><span class=""></span>Name</label>
                                     <div class="col-sm-9">
                                         <input type="text" class="form-control wi-form-control"
-                                               value="" id="curveName" name="curveName" ng-model="wiModal.lineObjTemplate.name" disabled>
+                                                value="" id="curveName" name="curveName" ng-model="wiModal.lineObjTemplate.name" disabled>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="control-label col-sm-3" for="alias"><span class=""></span>Alias</label>
+                                    <label class="control-label col-sm-3 normal-text" for="alias"><span class=""></span>Alias</label>
                                     <div class="col-sm-9">
                                         <input type="text" class="form-control wi-form-control"
-                                               value="" id="alias" name="alias"
-                                               ng-model="wiModal.curveOptions.alias">
+                                                value="" id="alias" name="alias"
+                                                ng-model="wiModal.curveOptions.alias">
                                     </div>
                                 </div>
                                 <div class="checkShow">
                                     <input type="checkbox" ng-model="wiModal.curveOptions.showHeader" checked>Show header &nbsp;
-                                    <input type="checkbox" ng-model="wiModal.curveOptions.showDataset">Show Dataset
+                                    <input type="checkbox" ng-model="wiModal.curveOptions.showDataset" ng-change="wiModal.onToggleShowDataset()">Show Dataset
                                 </div>
-                                <div class="scales">
-                                    <h5>Scales</h5>
-                                    <div class="form-group">
-                                        <label class="control-label col-sm-5" for="minValue">Min value</label>
-                                        <div class="col-sm-7">
-                                            <input type="number" class="form-control wi-form-control"
-                                                   value="" id="minValue" name="minValue"
-                                                   ng-model="wiModal.curveOptions.minValue">
-                                        </div>
+                                <h5>Scales</h5>
+                                <div class="form-group">
+                                    <label class="control-label col-sm-5 normal-text" for="minValue">Left value</label>
+                                    <div class="col-sm-7">
+                                        <input type="number" class="form-control wi-form-control"
+                                                value="" id="minValue" name="minValue"
+                                                ng-model="wiModal.curveOptions.minValue">
                                     </div>
-                                    <div class="form-group">
-                                        <label class="control-label col-sm-5" for="maxValue">Max value</label>
-                                        <div class="col-sm-7">
-                                            <input type="number" class="form-control wi-form-control"
-                                                   value="" id="maxValue" name="maxValue"
-                                                   ng-model="wiModal.curveOptions.maxValue">
-                                        </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label col-sm-5 normal-text" for="maxValue">Right value</label>
+                                    <div class="col-sm-7">
+                                        <input type="number" class="form-control wi-form-control"
+                                                value="" id="maxValue" name="maxValue"
+                                                ng-model="wiModal.curveOptions.maxValue">
                                     </div>
-                                    <input type="checkbox" ng-model="wiModal.curveOptions.autoValueScale">&nbsp;Auto value scales
-                                    <div class="form-group">
-                                        <label class="control-label col-sm-5">Min Depth: </label>
-                                        <div class="col-sm-7">
-                                            {{wiModal.lineObjTemplate.minDepth}}
-                                        </div>
+                                </div>
+                                <input type="checkbox" ng-model="wiModal.curveOptions.autoValueScale">&nbsp;Auto value scales
+                                <div class="form-group">
+                                    <label class="col-sm-5 normal-text">Min Depth: </label>
+                                    <div class="col-sm-7">
+                                        {{wiModal.lineObjTemplate.minDepth}}
                                     </div>
-                                    <div class="form-group">
-                                        <label class="control-label col-sm-5">Max Depth: </label>
-                                        <div class="col-sm-7">
-                                            {{wiModal.lineObjTemplate.maxDepth}}
-                                        </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-5 normal-text">Max Depth: </label>
+                                    <div class="col-sm-7">
+                                        {{wiModal.lineObjTemplate.maxDepth}}
                                     </div>
                                 </div>
                             </div>
 
                             <div class="col-sm-6">
                                 <h5>Sample</h5>
-                                <canvas id="sample" width="200" height="200" style="border:1px solid blue"
+                                <canvas id="sample" width="200" height="200" style="border:1px solid blue"                                
                                         ng-click="wiModal.canvasClicked();">
-
                                 </canvas>
                             </div>
-                            <div class="interpolation">
-                                <h5>Interpolation</h5>
+                            <div class="dislayType">
+                                <h5>Display Type</h5>
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <label class="control-label col-sm-5 normal-text">Display mode</label>
+                                        <label class="control-label col-sm-5 normal-text">Display As</label>
                                         <div class="col-sm-7">
-                                            <select ng-model="wiModal.curveOptions.displayMode"
-                                                    name="displayMode" id="displayMode" value=""
-                                                    class="form-control wi-form-control"
-                                                    ng-options="item for item in wiModal.selectData.displayMode track by item"
-                                                    ng-change="wiModal.changeOther();"></select>
+                                            <select ng-model="wiModal.curveOptions.displayAs" 
+                                                    name="displayAs" value="" 
+                                                    class="form-control wi-form-control" 
+                                                    ng-options="item for item in wiModal.selectData.displayAs track by item"></select>
                                         </div>
                                     </div>
                                     <div class="form-group">
@@ -105,52 +101,24 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label class="control-label col-sm-5 normal-text">Symbol Type</label>
+                                        <label class="control-label col-sm-5 normal-text">Display mode</label>
                                         <div class="col-sm-7">
-                                            <select ng-model="wiModal.symbolOptions.symbolStyle.symbolName"
-                                                    name="symbolType" id="symbolType" value=""
+                                            <select ng-model="wiModal.curveOptions.displayMode"
+                                                    name="displayMode" id="displayMode" value=""
                                                     class="form-control wi-form-control"
-                                                    ng-options="item for item in wiModal.selectData.symbolType track by item" disabled>
-                                            </select>
+                                                    ng-options="item for item in wiModal.selectData.displayMode track by item"
+                                                    ng-change="wiModal.changeOther();"></select>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-sm-5 normal-text"></label>                                        
+                                        <div class="col-sm-7 text-right">
+                                            <button type="button" ng-click="wiModal.onEditAttributeButtonClicked()"
+                                                    ng-disabled="wiModal.curveOptions.displayMode=='None'"
+                                                    id="editAttribute" class="btn btn-default">Edit</button>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <label class="control-label col-sm-5 normal-text">Block Position</label>
-                                        <div class="col-sm-7">
-                                            <select ng-model="wiModal.curveOptions.blockPosition"
-                                                    name="blockPosition" value="" id="blockPosition"
-                                                    class="form-control wi-form-control"
-                                                    ng-options="item for item in wiModal.selectData.blockPosition track by item" disabled>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <input type="checkbox" ng-model="wiModal.curveOptions.ignoreMissingValue" id="ignore" disabled>Ignore Missing Values
-                                    <br>
-                                    <div class="form-group">
-                                        <label class="control-label col-sm-5 normal-text">Symbol Size</label>
-                                        <div class="col-sm-5">
-                                            <input type="number" name="symbolSize" id="symbolSize"
-                                                   min="1" max="50"
-                                                   class="form-control wi-form-control"
-                                                   ng-model="wiModal.symbolOptions.symbolStyle.symbolSize"
-                                                   ng-change="wiModal.changeOther();" disabled 
-                                                   >
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="col-sm-5"></div>
-                                        <div class="col-sm-5">
-                                            <button type="button" ng-click="wiModal.onEditSymbolStyleButtonClicked();"
-                                                    id="editSymbolStyle"
-                                                    class="btn btn-default" disabled>&nbsp;Edit</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="dislayType">
-                                <h5>Display type</h5>
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label class="control-label col-sm-5 normal-text">Log/Linear</label>
@@ -162,6 +130,52 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
+                                        <label class="control-label col-sm-5 normal-text">Block Position</label>
+                                        <div class="col-sm-7">
+                                            <select ng-model="wiModal.curveOptions.blockPosition"
+                                                    name="blockPosition" value="" id="blockPosition"
+                                                    class="form-control wi-form-control"
+                                                    ng-options="item for item in wiModal.selectData.blockPosition track by item" disabled>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <!-- <div class="form-group">
+                                        <label class="control-label col-sm-5 normal-text">Symbol Type</label>
+                                        <div class="col-sm-7">
+                                            <select ng-model="wiModal.symbolOptions.symbolStyle.symbolName"
+                                                    name="symbolType" id="symbolType" value=""
+                                                    class="form-control wi-form-control"
+                                                    ng-options="item for item in wiModal.selectData.symbolType track by item" disabled>
+                                            </select>
+                                        </div>
+                                    </div> -->
+                                    <!-- <input type="checkbox" ng-model="wiModal.curveOptions.ignoreMissingValue" id="ignore" disabled>Ignore Missing Values
+                                    <br> -->
+                                    <!-- <div class="form-group">
+                                        <label class="control-label col-sm-5 normal-text">Symbol Size</label>
+                                        <div class="col-sm-5">
+                                            <input type="number" name="symbolSize" id="symbolSize"
+                                                   min="1" max="50"
+                                                   class="form-control wi-form-control"
+                                                   ng-model="wiModal.symbolOptions.symbolStyle.symbolSize"
+                                                   ng-change="wiModal.changeOther();" disabled 
+                                                   >
+                                        </div>
+                                    </div> -->
+                                    <!-- <div class="form-group">
+                                        <div class="col-sm-5"></div>
+                                        <div class="col-sm-5">
+                                            <button type="button" ng-click="wiModal.onEditSymbolStyleButtonClicked();"
+                                                    id="editSymbolStyle"
+                                                    class="btn btn-default" disabled>&nbsp;Edit</button>
+                                        </div>
+                                    </div> -->
+                                </div>
+                            </div>
+                            <!-- <div>
+                                <h5>Display type</h5>
+                                <div class="col-sm-6">
+                                    <div class="form-group">
                                         <div class="col-sm-5">Line Stype</div>
                                         <div class="col-sm-5">
                                             <button type="button" id="editLineStyle"
@@ -170,18 +184,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <label class="control-label col-sm-5 normal-text">Display As</label>
-                                        <div class="col-sm-7">
-                                            <select ng-model="wiModal.curveOptions.displayAs" 
-                                                    name="displayAs" value="" 
-                                                    class="form-control wi-form-control" 
-                                                    ng-options="item for item in wiModal.selectData.displayAs track by item"></select>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            </div> -->
                         </div>
                     </form>
                 </div>
