--- a/source/dialogs/variable-shading/variable-shading-modal.html
+++ b/source/dialogs/variable-shading/variable-shading-modal.html
@@ -30,7 +30,7 @@
                         <div class="col-sm-4">
                         </div>
                         <div class="col-sm-2">
-                            <p class="small-text">Curve Value:</p>
+                            <p class="small-text margin-top-0_5em">Curve Value:</p>
                         </div>
                         <div class="col-sm-3">
                             <input type="number" name=""
@@ -43,13 +43,13 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                            <label>
+                            <label class="small-text">
                                 <input type="radio" name="">
                                 Use Gradient
                             </label>
                         </div>
                         <div class="col-sm-2">
-                            <p class="small-text">Color:</p>
+                            <p class="small-text margin-top-0_5em">Color:</p>
                         </div>
                         <div class="col-sm-3">
                             <input type="button" name=""
@@ -62,13 +62,13 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                            <label>
+                            <label class="small-text">
                                 <input type="radio" name="">
                                 Use Palette
                             </label>
                         </div>
                         <div class="col-sm-2">
-                            <p class="small-text">Palette Name:</p>
+                            <p class="small-text margin-top-0_5em">Palette Name:</p>
                         </div>
                         <div class="col-sm-3">
                             <select class="form-control wi-form-control"></select>
@@ -78,7 +78,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                            <label>
+                            <label class="small-text">
                                 <input type="radio" name="">
                                 Use Values
                             </label>
